--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # Site settings
-baseurl = "https://example.org/"
+baseurl = "https://master.d2whfy7ev3l94o.amplifyapp.com"
 # themesDir = "../.."
 languageCode = "en-us"
 title = "Data, Cloud & Container"
