add about page, add linkedin

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ pygmentsStyle = "monokai"
 	description = "Data, Cloud & Container"
 	bio = "Data, Cloud & Container"
 	# Enter optionally your twitter account
-	twitter = "Your Twitter account"
+	twitter = ""
 	enableRSS = false
 
 	# Integrate Javascript files or stylesheets by adding the url to the external assets or by
@@ -36,20 +36,21 @@ pygmentsStyle = "monokai"
 	readMore = ""
 	copyright = ""
 	# Sharing options and author information in posts
-	aboutAuthor = "I'm an blogger."
-	tweet = ""
+        about=""
+        aboutAuthor = "I'm a technology enthusiast helping my clients to work with data. I'm available for hire."
+        tweet = ""
 	share = ""
 	# 404 page
 	title404 = ""
 	subtitle404 = ""
 
 	# Choose a font for the social icons in the footer. Either "mono-social" or "font-awesome"
-	iconFont = "mono-social"       
+	iconFont = "font-awesome"       
         # The social icons can be styled if differently you use mono as font - circle, rounded, or empty
-        socialIconStyle = "rounded"
+        socialIconStyle = "circle"
 
 # Add additional social link entries underneath
 [social]
     twitter  = "https://www.twitter.com/"
     github   = "https://www.github.com/christianrichter"
-
+    linkedin = "https://www.linkedin.com/in/christian-richter/"
