--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "hugo-cactus-theme"
 # Enter your tracking code to enable Google Analytics
 googleAnalytics = ""
 # Disable comments by leaving disqusShortname empty
-disqusShortname = "disqus_wvxwFCsXdj"
+disqusShortname = "crichter"
 pygmentsCodefences = true
 pygmentsStyle = "monokai"
 
