use correct disqus account

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ title = "Data, Cloud & Container"
 theme = "hugo-goa"
 
 ## Hugo Built-in Features
-disqusShortname = "https-shenoybr-github-io-hugo-goa-demo" # Comment out to disable Disqus.
+disqusShortname = "crichter" # Comment out to disable Disqus.
 googleAnalytics = "XYZ"
 enableRobotsTXT = true
 
