--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://www.crichter.io/"
+baseurl = "https://new-theme.d2whfy7ev3l94o.amplifyapp.com"
 languageCode = "en-us"
 title = "Data, Cloud & Container"
 theme = "hugo-theme-yuki"
