--- a/config.toml
+++ b/config.toml
@@ -25,7 +25,7 @@ disqusShortname = "crichter" # Comment out to disable Disqus.
   favicon = "images/logo_fav.png"
   logo = "images/logo_invers.png"
   avatar = "https://secure.gravatar.com/avatar/04b5f5698e05f05b8c45ef80aa825083"
-  displayImg = "images/display.png"
+  displayImg = "images/display_small.jpg"
 
   # This will display on the index page
   snsTitle = "Contact"
