--- a/config.toml
+++ b/config.toml
@@ -22,7 +22,7 @@ disqusShortname = "crichter" # Comment out to disable Disqus.
   authorwebsite = "https://crichter.io/"
 
   # The path to your images
-  favicon = "images/logo_fav.png"
+  favicon = "images/logo_invers.png"
   logo = "images/logo_invers.png"
   avatar = "https://secure.gravatar.com/avatar/04b5f5698e05f05b8c45ef80aa825083"
   displayImg = "images/display_small.jpg"
